--- a/Aula2405_EF_MF/Aula2405_EF_MF/Aula2405_EF_MF.csproj
+++ b/Aula2405_EF_MF/Aula2405_EF_MF/Aula2405_EF_MF.csproj
@@ -145,7 +145,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Controllers\" />
     <Folder Include="Views\Produtos\" />
   </ItemGroup>
   <ItemGroup>
@@ -257,6 +256,7 @@
     <Compile Include="Contact.aspx.designer.cs">
       <DependentUpon>Contact.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Controllers\CategoriaDAO.cs" />
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
